WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
269013
[WebGPU] Queue::errorValidatingSubmit may return success when it should have failed
https://bugs.webkit.org/show_bug.cgi?id=269013
Summary
[WebGPU] Queue::errorValidatingSubmit may return success when it should have ...
Mike Wyrzykowski
Reported
2024-02-08 13:21:19 PST
[WebGPU] Queue::errorValidatingSubmit may return success when it should have failed
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-08 13:22:29 PST
<
rdar://problem/122575578
>
Mike Wyrzykowski
Comment 2
2024-02-08 13:24:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/24094
EWS
Comment 3
2024-02-12 09:14:22 PST
Committed
274462@main
(314328886b00): <
https://commits.webkit.org/274462@main
> Reviewed commits have been landed. Closing PR #24094 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug