[WebGPU] Queue::errorValidatingSubmit may return success when it should have failed https://bugs.webkit.org/show_bug.cgi?id=269013 <rdar://problem/122575578>

Reviewed by Tadeu Zagallo.

In the failure case, we can't return lastError() since it might be empty.

Return it only if it is non-empty, otherwise fallback to a generic error.

* Source/WebGPU/WebGPU/Queue.mm:
(WebGPU::Queue::errorValidatingSubmit const):

Canonical link: https://commits.webkit.org/274462@main